2006-08-02  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/gui/char_select.cpp, src/gui/char_select.h, src/gui/register.cpp,
	src/gui/register.h, src/logindata.h, src/main.cpp, src/main.h,
	src/net/charserverhandler.cpp, src/net/loginhandler.cpp,
	src/net/protocol.h: Ported account registration to tmwserv. There's
	still a disconnection/reconnection between registration and login.
	* src/gui/gui.cpp, src/register.cpp, src/register.h: Removed sex
	choice.

2006-08-01  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* configure.ac: Moved some basic checks above the checks on the
	libraries we depend on, in order to get rid of the confusing
	rpl_realloc error.
	* src/net/beinghandler.cpp, src/net/maploginhandler.cpp,
	src/net/protocol.h, src/resources/openglsdlimageloader.cpp,
	src/player.cpp: Fixed several compiler warnings and a linker error
	when compiling without OpenGL support.

2006-08-01  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/gui/gui.cpp, The Mana World.dev, tmw.cbp: Fixed compilation
	issues in windows.

2006-07-31  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/net/network.cpp: Corrected an off by one error in packet size.

2006-07-30  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/openglgraphics.cpp, src/game.cpp, src/main.cpp,
	src/gui/buddywindow.cpp, src/gui/connection.cpp, src/gui/sell.cpp,
	src/gui/trade.cpp, src/gui/char_server.cpp, src/gui/window.cpp,
	src/gui/login.cpp, src/gui/skill.h, src/gui/gui.cpp,
	src/gui/item_amount.h, src/gui/setup_audio.h, src/gui/newskill.cpp,
	src/gui/register.h, src/gui/setup.cpp, src/gui/npclistdialog.h,
	src/gui/updatewindow.cpp, src/gui/char_select.cpp, src/gui/login.h,
	src/gui/item_amount.cpp, src/gui/setup_audio.cpp,
	src/gui/npc_text.cpp, src/gui/chat.h, src/gui/setup_joystick.h,
	src/gui/setup_video.cpp, src/gui/ok_dialog.cpp, src/gui/textfield.cpp,
	src/gui/inventorywindow.h, src/gui/newskill.h, src/gui/box.h,
	src/gui/ministatus.cpp, src/gui/buy.h, src/gui/setup.h,